package functions;

public interface MathFunction {
    double calculate(double x);
}