' Generated by UML Generator
' Encoded: fLPjQzim4FwUNo7woLtZl1WC8x3HDasxG9k5EXsKCOgYA8cOB1jBJhDrtM_VEQuTsvBpidunwBddxhaxdIIVIuKZ5Vky8Nyo4U88-uXmBEM5KX6RneeEII0yzfkYJcF9PXGH5X5E6uqD2zqAzD90oAQXxA5P44_114iRFcUtmYh0fmb4C2SnnufQwnml-d7XqOXHQJA_vfh1ejj9PRdeeJkibjUn88e5OgkTSAogUNyEHH5dluRpJWbtluJxVn9CA1hDCQ4brutStyFIwmSopKwoklI0OcdM8phWKP9Aa43MI035qgp7IB0T4mh6eqTK196FEHo8dR8JB7OqhxvSyDCxsaJlwK3culsIYlexifAKwA321gPfNZcS1YFg6j5kfwO3vNIrxQcO3RtIocWYhOWcuZgY5R31N0DMJVwWmSdjauWjBYCio78V4uv_FJ7Vu3kSpVWBtEQAaLSq67iP3tr2NMftdPBzSd0p71KOziTMfnnWT5KmLwtUP30kc3ijnotP-zwtfwyFa_73vEbgUDz37hmbOW7C4uwdJZk8LHYhDf6hzad9x-R-Olnbs3_0Tn7XS5dnfkimYE3Mww6-N0tU5k0ew7CHiKxpMSjTVMYXXQE5pFI-_u16hm8sCoX0TTUCKsl-jllL0Pc3KM2VPh5CaK8UACZ9WXwCmJcZmabVmdiyOOhJBPRMF2g4R2AVYSTi2s25ru-52Td8RI_oGZUICJbBowZDV_DBi8rDnMoxW4CNRbT9fID3fI0DFmQjrf_FvJEUljnr-0VRrc37p7QCPDTCTdLoyhRft0JLgCaRfLCJLASoKz79Ks16jG2LgrhtgX2q09kh844BUvw2hLQrsC9KQCPps7JuAVm7
' URL: http://www.plantuml.com/plantuml/uml/fLPjQzim4FwUNo7woLtZl1WC8x3HDasxG9k5EXsKCOgYA8cOB1jBJhDrtM_VEQuTsvBpidunwBddxhaxdIIVIuKZ5Vky8Nyo4U88-uXmBEM5KX6RneeEII0yzfkYJcF9PXGH5X5E6uqD2zqAzD90oAQXxA5P44_114iRFcUtmYh0fmb4C2SnnufQwnml-d7XqOXHQJA_vfh1ejj9PRdeeJkibjUn88e5OgkTSAogUNyEHH5dluRpJWbtluJxVn9CA1hDCQ4brutStyFIwmSopKwoklI0OcdM8phWKP9Aa43MI035qgp7IB0T4mh6eqTK196FEHo8dR8JB7OqhxvSyDCxsaJlwK3culsIYlexifAKwA321gPfNZcS1YFg6j5kfwO3vNIrxQcO3RtIocWYhOWcuZgY5R31N0DMJVwWmSdjauWjBYCio78V4uv_FJ7Vu3kSpVWBtEQAaLSq67iP3tr2NMftdPBzSd0p71KOziTMfnnWT5KmLwtUP30kc3ijnotP-zwtfwyFa_73vEbgUDz37hmbOW7C4uwdJZk8LHYhDf6hzad9x-R-Olnbs3_0Tn7XS5dnfkimYE3Mww6-N0tU5k0ew7CHiKxpMSjTVMYXXQE5pFI-_u16hm8sCoX0TTUCKsl-jllL0Pc3KM2VPh5CaK8UACZ9WXwCmJcZmabVmdiyOOhJBPRMF2g4R2AVYSTi2s25ru-52Td8RI_oGZUICJbBowZDV_DBi8rDnMoxW4CNRbT9fID3fI0DFmQjrf_FvJEUljnr-0VRrc37p7QCPDTCTdLoyhRft0JLgCaRfLCJLASoKz79Ks16jG2LgrhtgX2q09kh844BUvw2hLQrsC9KQCPps7JuAVm7
' Generated on: 2026-03-14T18:23:21.301890800

@startuml
skinparam classAttributeIconSize 0
hide circle

class Ln {
  -eps: double
  --
  +Ln(eps: double)
  +calculate(x: double): double
  -lnSeries(x: double): double
}

class Log10 {
  -ln: MathFunction
  --
  +Log10(ln: MathFunction)
  +calculate(x: double): double
}

class Log2 {
  -ln: MathFunction
  --
  +Log2(ln: MathFunction)
  +calculate(x: double): double
}

class Log5 {
  -ln: MathFunction
  --
  +Log5(ln: MathFunction)
  +calculate(x: double): double
}

interface MathFunction {
  ~calculate(x: double): double
}

class Cos {
  -sin: MathFunction
  --
  +Cos(sin: MathFunction)
  +calculate(x: double): double
}

class Sec {
  -cos: MathFunction
  --
  +Sec(cos: MathFunction)
  +calculate(x: double): double
}

class Sin {
  -eps: double
  --
  +Sin(eps: double)
  +calculate(x: double): double
  -normalize(x: double): double
}

class Tan {
  -sin: MathFunction
  -cos: MathFunction
  --
  +Tan(sin: MathFunction, cos: MathFunction)
  +calculate(x: double): double
}

class FunctionSystem {
  -sin: MathFunction
  -sec: MathFunction
  -tan: MathFunction
  -ln: MathFunction
  -log2: MathFunction
  -log5: MathFunction
  -log10: MathFunction
  --
  +FunctionSystem(eps: double)
  +FunctionSystem(sin: MathFunction, sec: MathFunction, tan: MathFunction, ln: MathFunction, log2: MathFunction, log5: MathFunction, log10: MathFunction)
  +calculate(x: double): double
  -calculateTrigBranch(x: double): double
  -calculateLogBranch(x: double): double
}

class Main {
  -{static} EPS: double = 1e-12
  -{static} BEGIN: double = -8.0
  -{static} END: double = 8.0
  -{static} STEP: double = 0.25
  -{static} CSV_OUTPUT_DIR: String = "lab2/output/csv/"
  -{static} GRAPHIC_OUTPUT_DIR: String = "lab2/output/graph/"
  -{static} exporter: CsvExporter = new CsvExporter()
  --
  +{static} main(args: String[]): void
  -{static} exportCSVFile(function: MathFunction, filename: String): void
  -{static} plotCsv(csvPath: String, chartTitle: String, outputName: String, minY: double, maxY: double): void
}

class CsvExporter {
  +export(function: MathFunction, start: double, end: double, step: double, fileName: String): void
}

Ln ..|> MathFunction
Log10 ..|> MathFunction
Log10 *-- MathFunction
Log2 ..|> MathFunction
Log2 *-- MathFunction
Log5 ..|> MathFunction
Log5 *-- MathFunction
Cos ..|> MathFunction
Cos *-- MathFunction
Sec ..|> MathFunction
Sec *-- MathFunction
Sin ..|> MathFunction
Tan ..|> MathFunction
Tan *-- MathFunction
FunctionSystem ..|> MathFunction
FunctionSystem *-- MathFunction
Main *-- CsvExporter
Main ..> MathFunction
CsvExporter ..> MathFunction
@enduml